--- a/.github/workflows/ejecucion_actividades.yml
+++ b/.github/workflows/ejecucion_actividades.yml
@@ -31,6 +31,8 @@ jobs:
         run: python src/pad/actividad_1.py
       - name: paso6 - Ejecutar script de la actividad 2
         run: python src/pad/actividad_2.py
+        name: paso7 - Ejecutar script de la actividad 3
+        run: python src/pad/actividad_3.py
         
         
 
