--- a/.github/workflows/ejecucion_actividades.yml
+++ b/.github/workflows/ejecucion_actividades.yml
@@ -33,6 +33,8 @@ jobs:
         run: python src/pad/actividad_2.py
       - name: paso7 - Ejecutar script de la actividad 3
         run: python src/pad/actividad_3.py
+      - name: Crear directorios si no existen
+        run: mkdir -p ./src/pad/actividad_3
         
         
 
